<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bill Buddy</string>

    <string name="title_activity_launcher">Bill Recognition</string>
    <string name="title_scan">Scan !</string>
    <string name="title_calculate">Results</string>
    <string name="title_history">History</string>
    <string name="action_settings">Settings</string>

    <string name="standard">Standard</string>
    <string name="ffc">Front-Facing</string>
    <string name="record">Record Video</string>
    <string name="stop">Stop</string>
    <string name="lock_to_landscape">Lock to Landscape</string>
    <string name="launch_camera_app">Launch Camera App</string>
    <string name="take_picture">Take Picture</string>
    <string name="auto_focus">Auto-focus</string>
    <string name="single_shot_mode">Single-Shot Mode</string>
    <string name="no_image">There was no image to show!</string>
    <string name="show_zoom">Show Zoom</string>
    <string name="flash">Flash</string>
    <string name="launch_full_screen">Launch Full-Screen</string>
    <string name="mirror_ffc">Mirror FFC</string>

    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>

    <string name="list_header_description">Info</string>
    <string name="list_header_date">Taken</string>
    <string name="list_header_snapshot">Preview</string>
</resources>
