<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="ifRoom"
        android:title="@string/take_picture">
    </item>
    <item
        android:id="@+id/record"
        android:showAsAction="ifRoom"
        android:title="@string/record">
    </item>
    <item
        android:id="@+id/stop"
        android:showAsAction="ifRoom"
        android:title="@string/stop"
        android:visible="false">
    </item>
    <item
        android:id="@+id/autofocus"
        android:enabled="false"
        android:showAsAction="never"
        android:title="@string/auto_focus">
    </item>
    <item
        android:id="@+id/single_shot"
        android:checkable="true"
        android:checked="false"
        android:showAsAction="never"
        android:title="@string/single_shot_mode">
    </item>
    <item
        android:id="@+id/show_zoom"
        android:checkable="true"
        android:checked="true"
        android:title="@string/show_zoom">
    </item>
    <item
        android:id="@+id/mirror_ffc"
        android:checkable="true"
        android:checked="false"
        android:title="@string/mirror_ffc">
    </item>

</menu>